error fix overflow roelie

--- a/public/style.css
+++ b/public/style.css
@@ -38,7 +38,7 @@ body {
 
 /* test roelie */
 html{
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 /* Header zenit*/   
 
